# ScanEPIC

./: .gitignore  README.md  pyproject.toml  setup.py
src/: __init__.py  cli.py
src/extract/long/: __init__.py  long.py
src/extract/short/: __init__.py  _cython_fi.c  _cython_fi.pyx  short.py
src/extract/single/: __init__.py  cython_helpers.c  cython_helpers.pyx  single.py
src/tools/: __init__.py  exitron2vcf.py
test_data/: long_test_data.bam  long_test_data.bam.bai  long_test_data.exitron  sc_test.bam  sc_test.bam.bai  sc_test.exitron  sc_test_bam_list.txt  sc_test_cell_types.tsv  sc_test_normal.bam  sc_test_normal.bam.bai  sc_test_tumor.bam  sc_test_tumor.bam.bai  test_data.bam  test_data.bam.bai  test_data.exitron  test_data.exitron.vcf
test_data/sc_test_out/: exitron_splicing_summary.tsv  sc_test_normal.exitron  sc_test_tumor.exitron
