[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "Cython>=0.29.0",
    "numpy>=1.21.0",
    "pysam>=0.19.0"
]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "scanepic"
version = "2.0.0"
authors = [
    {name = "Josh Fry", email = "joshua.fry@northwestern.edu"}
]
description = "A tool for identifying exitron splicing events from RNA-seq data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pysam>=0.19.0",
    "click>=8.0.0",
    "gffutils>=0.10.0",
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "biopython>=1.79",
    "statsmodels>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[project.scripts]
scanepic = "src.cli:cli"

[project.urls]
Homepage = "https://github.com/ylab-hi/ScanEPIC"
Repository = "https://github.com/ylab-hi/ScanEPIC"
Issues = "https://github.com/ylab-hi/ScanEPIC/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
"src.extract.long" = ["blacklist.tsv"]